fixed sponsor image sizes on mobile

--- a/styles/_sponsors.scss
+++ b/styles/_sponsors.scss
@@ -43,17 +43,17 @@
             filter: grayscale( 100% );
             height: auto;
             padding: 50px;
-            width: 33%;
+            width: 33vh;
             &:hover { cursor: pointer; filter: grayscale( 0% ); transform: scale(1.5);}
         } // sponsors_img
 
-        .sponsors_premium_logo { width: 50% !important; }
+        .sponsors_premium_logo { width: 50vh !important; }
 
         .sponsors_plat {
             filter: grayscale( 100% );
             height: auto;
             padding: 50px;
-            width: 40%;
+            width: 40vh;
             &:hover { cursor: pointer; filter: grayscale( 0% ); transform: scale(1.5); }
         } // sponsors_plat
 
@@ -61,7 +61,7 @@
             filter: grayscale( 100% );
             height: auto;
             padding: 50px;
-            width: 35%;
+            width: 35vh;
             &:hover { cursor: pointer; filter: grayscale( 0% ); transform: scale(1.5); }
         } // sponsors_gold
 
@@ -69,7 +69,7 @@
             filter: grayscale( 100% );
             height: auto;
             padding: 50px;
-            width: 30%;
+            width: 30vh;
             &:hover { cursor: pointer; filter: grayscale( 0% ); }
         } // sponsors_silver
 
@@ -77,7 +77,7 @@
             filter: grayscale( 100% );
             height: auto;
             padding: 50px;
-            width: 25%;
+            width: 25vh;
             &:hover { cursor: pointer; filter: grayscale( 0% ); }
         } // sponsors_bronze
 
